Fix overflowing input-instructions

--- a/templates/css/style.scss
+++ b/templates/css/style.scss
@@ -1634,6 +1634,7 @@ input[type=range] {
 
 		> * + * {
 			flex: 0 0 auto;
+			max-width: 100%;
 		}
 
 		> * + input[type=range]{
